# obs-tournament-plugin

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/scripts/: .build.zsh
.github/workflows/: build-project.yaml
cmake/common/: bootstrap.cmake
data/locale/: en-US.ini
scripts/: build.sh  install.sh
src/: logger.cpp  logger.hpp  plugin-main.c  plugin-main.cpp  plugin-support.c.in  plugin-support.h
src/data/: data-helpers.cpp  data-helpers.hpp  match-participant-from-match.cpp  match-participant-from-match.hpp  match-participant-player.cpp  match-participant-player.hpp  match-participant-unknown.cpp  match-participant-unknown.hpp  match-participant.cpp  match-participant.hpp  match-reference-remap.cpp  match-reference-remap.hpp  match-reference.cpp  match-reference.hpp  match.cpp  match.hpp  player-reference.cpp  player-reference.hpp  player.cpp  player.hpp  plugin-data.cpp  plugin-data.hpp  tournament-outputs.cpp  tournament-outputs.hpp  tournament-reference.cpp  tournament-reference.hpp  tournament-round-reference.cpp  tournament-round-reference.hpp  tournament-round.cpp  tournament-round.hpp  tournament.cpp  tournament.hpp
src/model/: custom-knockout-tournament.cpp  custom-knockout-tournament.hpp  match-reference.cpp  match-reference.hpp  player-reference.cpp  player-reference.hpp  player.hpp  plugin-data-object-helpers.hpp  plugin-data-object.cpp  plugin-data-object.hpp  plugin-data.cpp  plugin-data.hpp  tournament-match-participant-player.cpp  tournament-match-participant-player.hpp  tournament-match-participant-unknown.cpp  tournament-match-participant-unknown.hpp  tournament-match-participant-winner-of-match.cpp  tournament-match-participant-winner-of-match.hpp  tournament-match-participant.cpp  tournament-match-participant.hpp  tournament-match.cpp  tournament-match.hpp  tournament-reference.cpp  tournament-reference.hpp  tournament.cpp  tournament.hpp
src/model_backup/: custom-knockout-tournament.hpp  match-reference.cpp  player.cpp  player.hpp  plugin-data-object-helpers.hpp  plugin-data-object.hpp  plugin-data.cpp  tournament-match-participant-player.cpp  tournament-match-participant-player.hpp  tournament-match-participant-unknown.cpp  tournament-match-participant-unknown.hpp  tournament-match-participant-winner-of-match.cpp  tournament-match-participant.cpp  tournament-match-participant.hpp  tournament-match.hpp  tournament.hpp
src/ui/: validation.hpp
src/ui/components/: button.cpp  button.hpp  combo-box.hpp  icon.cpp  icon.hpp  label.cpp  label.hpp  labeled-input.cpp  labeled-input.hpp  line-edit.cpp  line-edit.hpp  player-combo-box.cpp  player-combo-box.hpp
src/ui/dialogs/: base-dialog.cpp  base-dialog.hpp  error-dialog.cpp  error-dialog.hpp  plugin-dialog.cpp  plugin-dialog.hpp
src/ui/tabs/: base-tab.cpp  base-tab.hpp  debug-frame.cpp  setup-tab.cpp  setup-tab.hpp
src/ui/tabs/custom-knockout-tab/: custom-knockout-configuration-frame.cpp  custom-knockout-configuration-frame.hpp  custom-knockout-configuration-match-frame.cpp  custom-knockout-running-all-matches-frame.cpp  custom-knockout-running-frame.cpp  custom-knockout-tab.cpp  custom-knockout-tab.hpp
src/ui/tabs/custom-tournament/: custom-tournament-tab.cpp  custom-tournament-tab.hpp
src/ui/tabs/custom-tournament/configuration/: custom-tournament-configuration-frame.cpp  custom-tournament-configuration-frame.hpp  custom-tournament-match-configuration-frame.cpp  custom-tournament-match-configuration-frame.hpp  custom-tournament-round-configuration-frame.cpp  custom-tournament-round-configuration-frame.hpp  match-participant-input.cpp  match-participant-input.hpp
src/ui/tabs/custom-tournament/started/: custom-tournament-started-frame.cpp  custom-tournament-started-frame.hpp  custom-tournament-started-match-frame.cpp  custom-tournament-started-match-frame.hpp  custom-tournament-started-match-participant-frame.cpp  custom-tournament-started-match-participant-frame.hpp  custom-tournament-started-outputs-frame.cpp  custom-tournament-started-outputs-frame.hpp  custom-tournament-started-round-frame.cpp  custom-tournament-started-round-frame.hpp  custom-tournament-started-score-frame.cpp  custom-tournament-started-score-frame.hpp  source-combo-box.cpp  source-combo-box.hpp
src/ui/tabs/setup/: create-player-frame.cpp  create-player-frame.hpp  create-tournament-frame.cpp  create-tournament-frame.hpp  debug-frame.cpp  debug-frame.hpp  setup-tab.cpp  setup-tab.hpp
src/ui_backup/components/: player-combo-box.cpp
src/ui_backup/dialogs/: base-dialog.hpp
src/ui_backup/tabs/: debug-frame.cpp  debug-frame.hpp  setup-tab.hpp
src/ui_backup/tabs/custom-knockout-tab/: custom-knockout-configuration-match-frame.hpp  custom-knockout-running-all-matches-frame.hpp  custom-knockout-running-frame.hpp  custom-knockout-tab.hpp
